# prog-1-lib

./: .gitignore  CMakeLists.txt  README.md  magic.cpp  magic.hpp  magic.ipp  main.cpp
ds/: singly_linked_list.ipp  static_array_queue.hpp  static_array_queue.ipp  struct_queue.hpp  struct_queue.ipp  struct_stack.hpp  struct_stack.ipp
examples/: es1_2023_10_17.cpp  es1_2023_10_3.cpp  es1_2023_11_23.cpp  es1_2023_11_28.cpp  es2_2023_10_12.cpp  es2_2023_10_17.cpp  es2_2023_10_3.cpp  es2_2023_11_28.cpp  es3_2023_10_10.cpp  es3_2023_10_12.cpp  es3_2023_10_17.cpp  es3_2023_10_3.cpp  es3_2023_10_31.cpp  es3_2023_11_21.cpp  es3_2023_11_23.cpp  es3_2023_11_28.cpp  es4_2023_10_17.cpp  es4_2023_10_3.cpp  es4_2023_10_31.cpp  es4_2023_10_5.cpp  es4_2023_11_14.cpp  es4_2023_11_23.cpp  es4_2023_11_28.cpp  es5_2023_10_17.cpp  es5_2023_10_3.cpp  es5_2023_10_31.cpp  es5_2023_11_28.cpp  es6_2023_10_3.cpp  esagg_2023_10_12.cpp  input2.txt  input3.txt
examples/esercitazioni-2023/11/23/: es1.cpp  es3.cpp  es4.cpp  input.txt
include/magic/: magic.hpp
include/magic/ds/: dynamic_array_queue.hpp  dynamic_array_stack.hpp  ll_queue.hpp  ll_stack.hpp  singly_linked_list.hpp  static_array_stack.hpp
lib/: magic.ipp
lib/ds/: dynamic_array_queue.ipp  dynamic_array_stack.ipp  ll_queue.ipp  ll_stack.ipp  singly_linked_list.ipp  static_array_stack.ipp
tests/: algo.tests.cpp  ds.tests.cpp  io_ops_tests_input.txt  strings.tests.cpp  test_main.cpp  tests.cpp
tools/: data.json  extract_examples.cpp
